# levels

./: .env.example  .gitignore  DECISIONS_IMPLEMENTED.md  DEPLOYMENT_STATUS.md  IMPLEMENTATION_PLAN_LOCKED.md  IMPLEMENTATION_PLAN_V2.md  Makefile  README.md  VERIFICATION_REPORT.md  VERIFICATION_REPORT_V2.md  compose.yaml  package-lock.json  package.json  playwright.config.ts  redocly.yaml  render.yaml
.github/: dependabot.yml  (+1 more)
apps/api/: README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/migrations/: env.py
apps/api/migrations/versions/: 2b3603691cea_create_levels_schema.py  7a6e13e4cd9b_add_water_idempotency_key.py  901a70c127bb_add_v2_tenant_schema.py  a91f6028df36_add_session_idempotency_key.py
apps/api/src/levels_api/: __init__.py  config.py  cors.py  database.py  errors.py  logging.py
apps/api/src/levels_api/auth/: __init__.py  rate_limit.py  routes.py  service.py
apps/api/src/levels_api/features/: __init__.py  history.py
apps/api/tests/: test_app.py
apps/api/tests/auth/: test_auth.py  test_hash_password.py
apps/api/tests/avatar/: test_avatar_routes.py
apps/api/tests/demo/: test_demo_routes.py
apps/api/tests/exercises/: test_exercise_routes.py
apps/api/tests/export/: test_export_routes.py  test_tenant_isolation_matrix.py
apps/api/tests/growth/: test_growth_engine.py
apps/api/tests/migrations/: test_database_status.py  test_migrations.py
apps/api/tests/models/: test_models.py
apps/api/tests/platform/: test_app.py
apps/api/tests/profile/: test_profile_routes.py
apps/api/tests/records/: test_record_engine.py  test_record_routes.py
apps/api/tests/schemas/: test_serializers.py
apps/api/tests/seed/: test_avatar_mapping.py  test_seed.py
apps/api/tests/sessions/: test_session_lifecycle.py
apps/api/tests/splits/: test_split_routes.py
apps/api/tests/streak/: test_streak_service.py
apps/api/tests/today/: test_dashboard.py
apps/api/tests/water/: test_water_routes.py
(+158 files in other folders)
