[project]
name = "levels-api"
version = "0.1.0"
description = "Flask API for LEVELS"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "flask==3.1.1",
  "gunicorn==23.0.0",
  "python-dotenv==1.1.1",
  "sqlalchemy==2.0.51",
]

[dependency-groups]
dev = [
  "mypy==1.16.1",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.2",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/levels_api"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=levels_api --cov-report=term-missing"
testpaths = ["tests"]
